# mfcfd

./: .gitignore  CMakeLists.txt  README.md
examples/: .gitignore  case.in  input.nml.example  job.sbatch  makefile  makefile_gen  parameter.F90.example  parameter.in  parameter_mod.mod
install/: .gitignore  README.md  install.py
mfpre/: Readme.md  graphpart  main.cpp  partition.cpp  plot.py  point.h  read_point_create_graph.cpp  write_output.cpp
src/: compute_enstrophy.F90  data_structure.F90  flux_residual.F90  fpi_solver.F90  initial_conditions.F90  interior_fluxes.F90  limiters.F90  makefile  makefile.in  meshfree_solver.F90  point_preprocessor.F90  q_lskum.F90  quadrant_fluxes.F90  readcase.F90  split_fluxes.F90  state_update.F90  wall_fluxes.F90
src_adjoint/: compute_entropy_b.F90  compute_force_coeffs_b.F90  data_structure.F90  data_structure_aoa.F90  data_structure_b.F90  data_structure_shape.F90  file_ops.F90  fpi_solver.F90  fpi_solver_b.F90  initial_conditions.F90  makefile  makefile.adjoint  makefile.in  makefile.primal  meshfree_solver.F90  objective_function_b.F90  outer_fluxes.F90  petsc_data_structure.F90  point_preprocessor.F90  post_processing.F90  q_lskum.F90  q_lskum_bbox_b.F90  q_lskum_chkpts_b.F90  q_variables.F90  quadrant_fluxes_b.F90  readcase.F90  revolve.f  run_script.sh  split_fluxes_b.F90  state_update_b.F90
src_anil/: Makefile  compute_enstrophy_mod.mod  compute_entropy_mod.mod  compute_force_coeffs_mod.mod  data_structure_mod.mod  execname  flux_residual_mod.mod  fpi_solver_mod.mod  generate_connectivity_mod.mod  initial_conditions_mod.mod  interior_fluxes_mod.mod  limiters_mod.mod  miscellaneous_fluxes_mod.mod  normal  objective_function_mod.mod  outer_fluxes_mod.mod  parameter_mod.mod  point_normals.f90  point_normals_mod.mod  point_preprocessor_mod.mod  post_processing_mod.mod  primal_fpi_solver_mod.mod  q_lskum.f90  q_lskum_mod.mod  q_variables.f90  q_variables_mod.mod  quadrant_fluxes_mod.mod  split_fluxes_mod.mod  state_update_mod.mod  test.f90  wall_fluxes_mod.mod
src_cuda/: ,  compute_delta.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  device_data_structure.F90  device_data_structure.cuf  flux_residual.F90  flux_residual.cuf  generate_connectivity.F90  initial_conditions.F90  makefile  makefile.in  meshfree_solver.F90  objective_function.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_lskum.F90  q_lskum.cuf  q_variables.F90  q_variables.cuf  state_update.F90
src_cuda_adjoint/: adaptation_sensors.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  device_data_structure.cuf  file_ops.F90  flux_residual.cuf  generate_connectivity.F90  initial_conditions.F90  makefile  makefile.in  meshfree_solver.F90  objective_function.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_lskum.cuf  q_variables.cuf  split_fluxes.F90  stagnation_values.F90  state_update.cuf
src_diff/: command.sh  compute_enstrophy.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  fpi_solver.F90  limiters.F90  objective_function.F90  parameter.F90  q_lskum.F90  q_variables.F90  quadrant_fluxes.F90  state_update.F90
src_forward/: compute_enstrophy_d.F90  compute_entropy.F90  compute_force_coeffs.F90  compute_force_coeffs_d.F90  data_structure_d.F90  fpi_solver_d.F90  generate_connectivity.F90  initial_conditions.F90  makefile  makefile.in  meshfree_solver.F90  petsc_data_structure.F90  point_normals.F90  point_normals_d.F90  point_preprocessor.F90  post_processing.F90  q_lskum_d.F90  quadrant_fluxes_d.F90  readcase.F90  state_update_d.F90
src_implicit/: data_structure.F90  flux_residual.F90  fpi_solver.F90  full_fluxes.F90  interior_fluxes.F90  makefile  makefile.in  outer_fluxes.F90  point_preprocessor.F90  quadrant_fluxes.F90  readparam.F90  state_update.F90
src_mpi/: .makefile.in.swp  adaptation_sensors.F90  compute_enstrophy.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  flux_residual.F90  fpi_solver.F90  generate_connectivity.F90  initial_conditions.F90  interior_fluxes.F90  limiters.F90  makefile  makefile.in  meshfree_solver.F90  miscellaneous.F90  objective_function.F90  outer_fluxes.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_lskum.F90  q_lskum_petsc.F90  q_variables.F90  readcase.F90  readparam.F90  state_update.F90  test.F90  wall_fluxes.F90
src_mpi_adjoint/: data_structure.F90  file_ops.F90  generate_connectivity.F90  initial_conditions.F90  makefile  makefile.in  meshfree_solver.F90  parameter.F90  petsc_data_structure.F90  point_normals.F90  point_preprocessor.F90  post_processing.F90  q_variables.F90  readcase.F90  revolve.f  stagnation_values.F90  utilities.F90
src_mpi_clean/: compute_enstrophy.F90  compute_entropy.F90  compute_force_coeffs.F90  data_structure.F90  flux_residual.F90  fpi_solver.F90  interior_fluxes.F90  limiters.F90  makefile.primal  meshfree_solver.F90  objective_function.F90  outer_fluxes.F90  petsc_data_structure.F90  point_preprocessor.F90  post_processing.F90  q_lskum.F90  q_variables.F90  quadrant_fluxes.F90  readcase.F90  run_script.sh  run_script_adjoint.sh  (+5 more)
(+1017 files in other folders)
